--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,34 +4,62 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
-
     tools:context=".Auth.Signup">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:background="@color/blue">
+
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
+
+            <TextView
+                android:id="@+id/admin_page_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="5dp"
+                android:text="SignUp"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </androidx.appcompat.widget.Toolbar>
+
 
     <ImageView
         android:id="@+id/signup_logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/tool_bar"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:orientation="vertical"
         android:src="@drawable/logo" />
 
-    <TextView
-        android:id="@+id/signup_logo_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/signup_logo"
-        android:layout_centerHorizontal="true"
-        android:text="Sign Up"
-        android:textColor="@color/blue"
-        android:textSize="25sp" />
+    <!--    <TextView-->
+    <!--        android:id="@+id/signup_logo_text"-->
+    <!--        android:layout_width="wrap_content"-->
+    <!--        android:layout_height="wrap_content"-->
+    <!--        android:layout_below="@id/signup_logo"-->
+    <!--        android:layout_centerHorizontal="true"-->
+    <!--        android:text="Sign Up"-->
+    <!--        android:textColor="@color/blue"-->
+    <!--        android:textSize="25sp"-->
+    <!--        android:textStyle="bold" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/signup_logo_text"
-        android:layout_marginTop="15dp"
+        android:layout_below="@id/signup_logo"
         android:orientation="vertical">
 
         <EditText
@@ -44,6 +72,7 @@
             android:background="@drawable/edit_text_shape"
             android:gravity="center"
             android:hint="Email"
+            android:textColorHint="@color/gray"
             android:textSize="18sp" />
 
         <EditText
@@ -56,6 +85,7 @@
             android:background="@drawable/edit_text_shape"
             android:gravity="center"
             android:hint="Name"
+            android:textColorHint="@color/gray"
             android:textSize="18sp" />
 
 
@@ -70,6 +100,7 @@
             android:gravity="center"
             android:hint="Phone Number"
             android:inputType="phone"
+            android:textColorHint="@color/gray"
             android:textSize="18sp"
             android:visibility="visible" />
 
@@ -84,6 +115,7 @@
             android:gravity="center"
             android:hint="Password"
             android:inputType="textPassword"
+            android:textColorHint="@color/gray"
             android:textSize="18sp" />
 
         <EditText
@@ -97,6 +129,7 @@
             android:gravity="center"
             android:hint="Confirm Password"
             android:inputType="textPassword"
+            android:textColorHint="@color/gray"
             android:textSize="18sp" />
 
 
