--- a/app/src/main/res/layout/visually_impaired.xml
+++ b/app/src/main/res/layout/visually_impaired.xml
@@ -1,69 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background"
+    android:orientation="vertical"
     tools:context=".Home.VisuallyImpaired">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tool_bar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_alignParentTop="true"
+        android:background="@color/blue">
 
-        <ImageView
-            android:id="@+id/image_captioning_btn"
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_vertical">
+
+            <ImageView
+                android:id="@+id/edit_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24" />
+
+            <TextView
+                android:id="@+id/admin_page_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="5dp"
+                android:text="Visually Impaired"
+                android:textColor="@color/white"
+                android:textSize="22sp"
+                android:textStyle="bold" />
+
+        </RelativeLayout>
+
+    </androidx.appcompat.widget.Toolbar>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/image_captioning" />
+            android:layout_gravity="center">
+
+            <ImageView
+                android:id="@+id/image_captioning_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_5sdp"
+                android:background="@drawable/image_captioning" />
 
 
-        <ImageView
-            android:id="@+id/labels_detection_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/image_captioning_btn"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="-30dp"
-            android:background="@drawable/labels_detection" />
+            <ImageView
+                android:id="@+id/labels_detection_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/image_captioning_btn"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-35dp"
+                android:background="@drawable/labels_detection" />
 
-        <ImageView
-            android:id="@+id/face_detection_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/labels_detection_btn"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/face_detection" />
-
-
-        <ImageView
-            android:id="@+id/object_detection_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/face_detection_btn"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="-20dp"
-            android:background="@drawable/object_detection" />
-
-        <ImageView
-            android:id="@+id/text_reader_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/object_detection_btn"
-            android:layout_marginTop="20dp"
-            android:background="@drawable/text_reader" />
+            <ImageView
+                android:id="@+id/face_detection_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/labels_detection_btn"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/face_detection" />
 
 
-        <ImageView
-            android:id="@+id/currency_detection_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/text_reader_btn"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="-20dp"
-            android:background="@drawable/currency_detection" />
+            <ImageView
+                android:id="@+id/object_detection_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/face_detection_btn"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-35dp"
+                android:background="@drawable/object_detection" />
+
+            <ImageView
+                android:id="@+id/text_reader_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/object_detection_btn"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/text_reader" />
 
 
-    </RelativeLayout>
+            <ImageView
+                android:id="@+id/currency_detection_btn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_reader_btn"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="-35dp"
+                android:background="@drawable/currency_detection" />
 
-</RelativeLayout>
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</LinearLayout>
