--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
 
     <color name="black">#FF000000</color>
+    <color name="gray">#717171</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blue">#133c8c</color>
     <color name="yellow" >#D39711</color>
